# py-questdb-query

./: .gitignore  .gitmodules  DEV_NOTES.md  README.md  pyproject.toml  test
.github/workflows/: ci.yaml
questdb_query/: __init__.py  asynchronous.py  endpoint.py  errors.py  pandas_util.py  stats.py  synchronous.py  tool.py
tests/: mock_server.py  tests.py  trips.csv
